compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case_clause_guards__module_string_access.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
assertion_line: 271
expression: "\n          import hero\n          pub fn main() {\n            let name = \"Tony Stark\"\n            case name {\n              n if n == hero.ironman -> True\n              _ -> False\n            }\n          }\n        "
---
----- SOURCE CODE

          import hero
          pub fn main() {
            let name = "Tony Stark"
            case name {
              n if n == hero.ironman -> True
              _ -> False
            }
          }
        

----- COMPILED JAVASCRIPT
import * as $hero from "../../package/hero.mjs";

export function main() {
  let name = "Tony Stark";
  if (name === ($hero.ironman)) {
    let n = name;
    return true;
  } else {
    return false;
  }
}
