compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case_clause_guards__not_eq_scalar.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
assertion_line: 109
expression: "pub fn main(xs, y: Int) {\n  case xs {\n    #(x) if x != y -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE
pub fn main(xs, y: Int) {
  case xs {
    #(x) if x != y -> 1
    _ -> 0
  }
}


----- COMPILED JAVASCRIPT
export function main(xs, y) {
  if (xs[0] !== y) {
    let x = xs[0];
    return 1;
  } else {
    return 0;
  }
}
