compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case_clause_guards__operator_wrapping_left.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
assertion_line: 83
expression: "pub fn main(xs, y: Bool, z: Bool) {\n  case xs {\n    #(x) if { x == y } == z -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE
pub fn main(xs, y: Bool, z: Bool) {
  case xs {
    #(x) if { x == y } == z -> 1
    _ -> 0
  }
}


----- COMPILED JAVASCRIPT
export function main(xs, y, z) {
  if ((xs[0] === y) === z) {
    let x = xs[0];
    return 1;
  } else {
    return 0;
  }
}
