compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case_clause_guards__tuple_index.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
assertion_line: 122
expression: "pub fn main(x, xs: #(Bool, Bool, Bool)) {\n  case x {\n    _ if xs.2 -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE
pub fn main(x, xs: #(Bool, Bool, Bool)) {
  case x {
    _ if xs.2 -> 1
    _ -> 0
  }
}


----- COMPILED JAVASCRIPT
export function main(x, xs) {
  if (xs[2]) {
    return 1;
  } else {
    return 0;
  }
}
